Watcher: Remove in memory watch store (elastic/elasticsearch#4201)
In order to prepare to the distributed watch execution, this commit
removes the in memory watch store.

Whenever a watch is needed now, a get request is executed and the parsing
is done. This happens when

* Put
* Get
* Ack
* Activate/Deactivate
* Execute

Note: This also means there are no usage stats currently regarding
the watch count, because we would need to execute a query. This would
require the usage stats to be async, see elastic/elasticsearch#3569

Another advantage is, that there is no dirty flag in the watch itself
needed anymore, because the watch is always the latest. Also write
operations store immediately and dont leave anything in memory.

Also ActionListener.wrap() was used a lot instead of more verbose anonmyous
inner classes.

Original commit: elastic/x-pack-elasticsearch@c47465b47cad72d3e46e951fd46347545cb69f1a

--- a/elasticsearch/src/test/resources/rest-api-spec/test/watcher/activate_watch/10_basic.yaml
+++ b/elasticsearch/src/test/resources/rest-api-spec/test/watcher/activate_watch/10_basic.yaml
@@ -36,10 +36,6 @@
   - match: { _id: "my_watch" }
 
   - do:
-      cluster.health:
-        wait_for_status: yellow
-
-  - do:
       xpack.watcher.get_watch:
         id: "my_watch"
 
@@ -51,7 +47,7 @@
       xpack.watcher.deactivate_watch:
         watch_id: "my_watch"
 
-  - match: { "_status.state.active" : false }
+  - match: { _status.state.active : false }
 
   - do:
       xpack.watcher.get_watch:
@@ -64,7 +60,7 @@
       xpack.watcher.activate_watch:
         watch_id: "my_watch"
 
-  - match: { "_status.state.active" : true }
+  - match: { _status.state.active : true }
 
   - do:
       xpack.watcher.get_watch:
