--- a/qa/smoke-test-watcher/src/test/resources/rest-api-spec/test/watcher_getting_started/10_monitor_cluster_health.yaml
+++ b/qa/smoke-test-watcher/src/test/resources/rest-api-spec/test/watcher_getting_started/10_monitor_cluster_health.yaml
@@ -65,6 +65,10 @@ teardown:
   - match: { created: true }
 
   - do:
+      indices.refresh:
+        index: .watches
+
+  - do:
       xpack.watcher.stats: {}
   - match: { "watch_count": 1 }
 
@@ -113,6 +117,9 @@ teardown:
         id: "cluster_health_watch"
   - match: { found: true }
 
+  - do:
+      indices.refresh:
+        index: .watches
 
   - do:
       xpack.watcher.stats: {}
