--- a/elasticsearch/src/test/resources/rest-api-spec/test/watcher/get_watch/20_missing.yaml
+++ b/elasticsearch/src/test/resources/rest-api-spec/test/watcher/get_watch/20_missing.yaml
@@ -4,6 +4,9 @@
       cluster.health:
           wait_for_status: yellow
 
+  - do:
+      indices.create:
+        index: .watches
 
   - do:
       catch: missing
