Add checks to RankEvalSpec to safe guard against missing parameters. (#22026)
Add checks to RankEvalSpec to safe guard against missing parameters.

Fail early in case no metric is supplied, no rated requests are supplied or the search source builder is missing but no template is supplied neither.

Add stricter checks around rank eval request parsing: Fail if in a rated request we see both, a verbatim request as well as request
template parameters.


Relates to #21260

--- a/qa/smoke-test-rank-eval-with-mustache/src/test/resources/rest-api-spec/test/rank-eval/30_template.yaml
+++ b/qa/smoke-test-rank-eval-with-mustache/src/test/resources/rest-api-spec/test/rank-eval/30_template.yaml
@@ -39,7 +39,7 @@
       indices.refresh: {}
 
   - do:
-      rank_eval_template:
+      rank_eval:
         body: {
           "template": { 
             "inline": "{\"query\": { \"match\" : {\"text\" : \"{{query_string}}\" }}}"
