--- a/elasticsearch/src/test/resources/rest-api-spec/test/start_stop_scheduler.yaml
+++ b/elasticsearch/src/test/resources/rest-api-spec/test/start_stop_scheduler.yaml
@@ -34,9 +34,18 @@ setup:
         "scheduler_id": "scheduler-1"
         "start": 0
   - do:
+      xpack.prelert.get_jobs:
+        job_id: "scheduled-job"
+        metric: "scheduler_status"
+  - match: { jobs.0.scheduler_status: STARTED }
+  - do:
       xpack.prelert.stop_scheduler:
         "scheduler_id": "scheduler-1"
-
+  - do:
+      xpack.prelert.get_jobs:
+        job_id: "scheduled-job"
+        metric: "scheduler_status"
+  - match: { jobs.0.scheduler_status: STOPPED }
 ---
 "Test start non existing scheduler":
     - do:
