Add mutually-exclusive param validation to GetCategories (elastic/elasticsearch#512)
Also adds body parsing to the REST action, which seemed to be missing (but supported because of the POST)

Closes elastic/elasticsearch#430

Original commit: elastic/x-pack-elasticsearch@e7455ffbb662bf92fe6e4a653a67e30220b2f821

--- a/elasticsearch/src/test/resources/rest-api-spec/test/jobs_get_result_categories.yaml
+++ b/elasticsearch/src/test/resources/rest-api-spec/test/jobs_get_result_categories.yaml
@@ -43,3 +43,54 @@ setup:
 
   - match: { categories.0.job_id: farequote }
   - match: { categories.0.category_id: 1 }
+
+---
+"Test with invalid param combinations":
+  - do:
+      catch: request
+      xpack.prelert.get_categories:
+        job_id: "farequote"
+        category_id: "1"
+        from: 0
+
+  - do:
+      catch: request
+      xpack.prelert.get_categories:
+        job_id: "farequote"
+        category_id: "1"
+        size: 1
+
+  - do:
+      catch: request
+      xpack.prelert.get_categories:
+        job_id: "farequote"
+        category_id: "1"
+        from: 0
+        size: 1
+
+---
+"Test with invalid param combinations (via body)":
+  - do:
+      catch: request
+      xpack.prelert.get_categories:
+        job_id: "farequote"
+        category_id: "1"
+        body:
+          from: 0
+
+  - do:
+      catch: request
+      xpack.prelert.get_categories:
+        job_id: "farequote"
+        category_id: "1"
+        body:
+          size: 1
+
+  - do:
+      catch: request
+      xpack.prelert.get_categories:
+        job_id: "farequote"
+        category_id: "1"
+        body:
+          from: 0
+          size: 1
