Split SchedulerConfig from Job (elastic/elasticsearch#541)
Original commit: elastic/x-pack-elasticsearch@32a55da72678afb346d678557a3e6f6609bc05ee

--- a/elasticsearch/src/main/resources/org/elasticsearch/xpack/prelert/job/messages/prelert_messages.properties
+++ b/elasticsearch/src/main/resources/org/elasticsearch/xpack/prelert/job/messages/prelert_messages.properties
@@ -44,7 +44,6 @@ system.audit.started = System started
 system.audit.shutdown = System shut down
 
 job.cannot.delete.while.running = Cannot delete job ''{0}'' while it is {1}
-job.cannot.delete.while.scheduler.runs = Cannot delete job ''{0}'' while the scheduler is running
 job.cannot.pause = Cannot pause job ''{0}'' while its status is {1}
 job.cannot.resume = Cannot resume job ''{0}'' while its status is {1}
 
@@ -136,13 +135,14 @@ job.config.transform.outputs.unused = None of the outputs of transform ''{0}'' a
 job.config.transform.output.name.used.more.than.once = Transform output name ''{0}'' is used more than once
 job.config.transform.unknown.type = Unknown TransformType ''{0}''
 job.config.unknown.function = Unknown function ''{0}''
-job.config.scheduler.field.not.supported = Scheduler configuration field {0} not supported
-job.config.scheduler.invalid.option.value = Invalid {0} value ''{1}'' in scheduler configuration
-job.config.scheduler.requires.bucket.span = A job configured with scheduler requires that bucket_span is specified
-job.config.scheduler.elasticsearch.does.not.support.latency = A job configured with an Elasticsearch scheduler cannot support latency
-job.config.scheduler.aggregations.requires.summary.count.field = A scheduler job with aggregations must have summary_count_field_name ''{1}''
-job.config.scheduler.elasticsearch.requires.dataformat.elasticsearch = A job configured with an Elasticsearch scheduler must have dataFormat ''ELASTICSEARCH''
-job.config.scheduler.multiple.aggregations = Both aggregations and aggs were specified - please just specify one
+
+scheduler.config.field.not.supported = Scheduler configuration field {0} not supported
+scheduler.config.invalid.option.value = Invalid {0} value ''{1}'' in scheduler configuration
+scheduler.config.multiple.aggregations = Both aggregations and aggs were specified - please just specify one
+
+scheduler.does.not.support.job.with.latency = A job configured with scheduler cannot support latency
+scheduler.aggregations.requires.job.with.summary.count.field = A job configured with a scheduler with aggregations must have summary_count_field_name ''{0}''
+scheduler.requires.job.with.dataformat.elasticsearch = A job configured with a scheduler must have dataFormat ''ELASTICSEARCH''
 
 job.data.concurrent.use.close = Cannot close job {0} while another connection {2}is {1} the job
 job.data.concurrent.use.flush = Cannot flush job {0} while another connection {2}is {1} the job
@@ -155,17 +155,12 @@ job.data.concurrent.use.upload = Cannot write to job {0} while another connectio
 job.missing.quantiles = Cannot read persisted quantiles for job ''{0}''
 job.unknown.id = No known job with id ''{0}''
 
-job.scheduler.cannot.start = Cannot start scheduler for job ''{0}'' while its status is {1}
-job.scheduler.cannot.stop.in.current.state = Cannot stop scheduler for job ''{0}'' while its status is {1}
-job.scheduler.cannot.update.in.current.state = Cannot update scheduler for job ''{0}'' while its status is {1}
-job.scheduler.failed.to.stop = Failed to stop scheduler
-job.scheduler.no.such.scheduled.job = There is no job ''{0}'' with a scheduler configured
-job.scheduler.status.started = started
-job.scheduler.status.stopping = stopping
-job.scheduler.status.stopped = stopped
-job.scheduler.status.updating = updating
-job.scheduler.status.deleting = deleting
-
+scheduler.cannot.start = Cannot start scheduler [{0}] while its status is {1}
+scheduler.cannot.stop.in.current.state = Cannot stop scheduler [{0}] while its status is {1}
+scheduler.cannot.update.in.current.state = Cannot update scheduler [{0}] while its status is {1}
+scheduler.cannot.delete.in.current.state = Cannot delete scheduler [{0}] while its status is {1}
+scheduler.failed.to.stop = Failed to stop scheduler
+scheduler.not.found = No scheduler with id [{0}] exists
 
 json.job.config.mapping.error = JSON mapping error reading the job configuration
 json.job.config.parse.error = JSON parse error reading the job configuration
