--- a/elasticsearch/src/test/resources/rest-api-spec/test/start_stop_scheduler.yaml
+++ b/elasticsearch/src/test/resources/rest-api-spec/test/start_stop_scheduler.yaml
@@ -3,22 +3,6 @@ setup:
       xpack.prelert.put_job:
         body:  >
           {
-            "job_id":"non-scheduled-job",
-            "description":"Analysis of response time by airline",
-            "analysis_config" : {
-                "bucket_span":3600,
-                "detectors" :[{"function":"metric","field_name":"responsetime","by_field_name":"airline"}]
-            },
-            "data_description" : {
-                "format":"JSON",
-                "time_field":"time",
-                "time_format":"epoch"
-            }
-          }
-  - do:
-      xpack.prelert.put_job:
-        body:  >
-          {
             "job_id":"scheduled-job",
             "description":"Analysis of response time by airline",
             "analysis_config" : {
@@ -29,49 +13,50 @@ setup:
                 "format":"ELASTICSEARCH",
                 "time_field":"time",
                 "time_format":"epoch"
-            },
-            "scheduler_config" : {
-                "indexes" : "airline-data",
-                "types" : "response"
             }
           }
-
+  - do:
+      xpack.prelert.put_scheduler:
+        scheduler_id: scheduler-1
+        body:  >
+          {
+            "job_id":"scheduled-job",
+            "indexes":"airline-data",
+            "types":"response"
+          }
 ---
 "Test start and stop scheduler happy path":
   - do:
       xpack.prelert.open_job:
         job_id: "scheduled-job"
   - do:
-      xpack.prelert.start_job_scheduler:
-        "job_id": "scheduled-job"
+      xpack.prelert.start_scheduler:
+        "scheduler_id": "scheduler-1"
         "start": 0
   - do:
-      xpack.prelert.stop_job_scheduler:
-        "job_id": "scheduled-job"
+      xpack.prelert.stop_scheduler:
+        "scheduler_id": "scheduler-1"
 
 
 ---
-"Test start non existing job":
+"Test start non existing scheduler":
     - do:
         catch: missing
-        xpack.prelert.start_job_scheduler:
-          "job_id": "non-existing-job"
-          "start": 0
-
----
-"Test start non scheduled job":
-    - do:
-        catch: request
-        xpack.prelert.start_job_scheduler:
-          "job_id": "non-scheduled-job"
+        xpack.prelert.start_scheduler:
+          "scheduler_id": "non-existing-scheduler"
           "start": 0
 
 ---
 "Test start scheduled job, but not open":
     - do:
         catch: conflict
-        xpack.prelert.start_job_scheduler:
-          "job_id": "scheduled-job"
+        xpack.prelert.start_scheduler:
+          "scheduler_id": "scheduler-1"
+          "start": 0
+    - do:
+        catch: /cannot start scheduler, expected job status \[OPENED\], but got \[CLOSED\]/
+        xpack.prelert.start_scheduler:
+          "scheduler_id": "scheduler-1"
           "start": 0
 
 ---
@@ -80,11 +65,17 @@ setup:
       xpack.prelert.open_job:
         job_id: "scheduled-job"
   - do:
-      xpack.prelert.start_job_scheduler:
-        "job_id": "scheduled-job"
+      xpack.prelert.start_scheduler:
+        "scheduler_id": "scheduler-1"
         "start": 0
   - do:
       catch: conflict
-      xpack.prelert.start_job_scheduler:
-        "job_id": "scheduled-job"
+      xpack.prelert.start_scheduler:
+        "scheduler_id": "scheduler-1"
+        "start": 0
+
+  - do:
+      catch: /scheduler already started, expected scheduler status \[STOPPED\], but got \[STARTED\]/
+      xpack.prelert.start_scheduler:
+        "scheduler_id": "scheduler-1"
         "start": 0
