--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,7 @@
-project(':').projectDir = new File('../elasticsearch')
-apply from: '../elasticsearch/settings.gradle'
+File extrasDir = new File(settingsDir, '..').getCanonicalFile()
+if (extrasDir.name.endsWith('-extra') == false) {
+  throw new GradleException("x-pack must be checked out under an elasticsearch-extra directory, found ${extrasDir.name}")
+}
+File elasticsearchDir = new File(extrasDir.parentFile, extrasDir.name[0..-7])
+project(':').projectDir = elasticsearchDir
+apply from: "${elasticsearchDir}/settings.gradle"
