--- a/elasticsearch/build.gradle
+++ b/elasticsearch/build.gradle
@@ -91,7 +91,7 @@ forbiddenPatterns {
 
 // TODO: standardize packaging config for plugins
 bundlePlugin {
-  from(project(':x-plugins').projectDir) {
+  from(project(':x-pack').projectDir) {
     include 'LICENSE.txt'
   }
   from(projectDir) {
