--- a/license-tools/build.gradle
+++ b/license-tools/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'elasticsearch.build'
 
 dependencies {
-  compile project(':x-plugins:elasticsearch')
+  compile project(':x-pack:elasticsearch')
   compile "org.elasticsearch:elasticsearch:${version}"
   testCompile "org.elasticsearch.test:framework:${version}"
 }
