--- a/qa/rolling-upgrade/build.gradle
+++ b/qa/rolling-upgrade/build.gradle
@@ -50,7 +50,7 @@ Closure waitWithAuth = { NodeInfo node, AntBuilder ant ->
 task oldClusterTest(type: RestIntegTestTask) {
     mustRunAfter(precommit)
     cluster {
-        plugin ':x-plugins:elasticsearch'
+        plugin ':x-pack:elasticsearch'
         distribution = 'zip'
         bwcVersion = '6.0.0-alpha1-SNAPSHOT' // TODO: either randomize, or make this settable with sysprop
         numBwcNodes = 2
@@ -65,7 +65,7 @@ task oldClusterTest(type: RestIntegTestTask) {
 task mixedClusterTest(type: RestIntegTestTask) {
     dependsOn(oldClusterTest, 'oldClusterTest#node1.stop')
     cluster {
-        plugin ':x-plugins:elasticsearch'
+        plugin ':x-pack:elasticsearch'
         distribution = 'zip'
         clusterName = 'rolling-upgrade'
         unicastTransportUri = { seedNode, node, ant -> oldClusterTest.nodes.get(0).transportUri() }
@@ -79,7 +79,7 @@ task mixedClusterTest(type: RestIntegTestTask) {
 task upgradedClusterTest(type: RestIntegTestTask) {
     dependsOn(mixedClusterTest, 'oldClusterTest#node0.stop')
     cluster {
-        plugin ':x-plugins:elasticsearch'
+        plugin ':x-pack:elasticsearch'
         distribution = 'zip'
         clusterName = 'rolling-upgrade'
         unicastTransportUri = { seedNode, node, ant -> mixedClusterTest.nodes.get(0).transportUri() }
@@ -100,14 +100,14 @@ test.enabled = false // no unit tests for rolling upgrades, only the rest integr
 check.dependsOn(integTest)
 
 dependencies {
-    testCompile project(path: ':x-plugins:elasticsearch', configuration: 'runtime')
+    testCompile project(path: ':x-pack:elasticsearch', configuration: 'runtime')
 }
 
 // copy x-pack plugin info so it is on the classpath and security manager has the right permissions
 String outputDir = "generated-resources/${project.name}"
 task copyXPackPluginProps(type: Copy) {
-    from project(':x-plugins:elasticsearch').file('src/main/plugin-metadata')
-    from project(':x-plugins:elasticsearch').tasks.pluginProperties
+    from project(':x-pack:elasticsearch').file('src/main/plugin-metadata')
+    from project(':x-pack:elasticsearch').tasks.pluginProperties
     into outputDir
 }
 project.sourceSets.test.output.dir(outputDir, builtBy: copyXPackPluginProps)
