--- a/qa/security-migrate-tests/build.gradle
+++ b/qa/security-migrate-tests/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'elasticsearch.rest-test'
 
 dependencies {
-  testCompile project(path: ':x-plugins:elasticsearch', configuration: 'runtime')
-  testCompile project(path: ':x-plugins:elasticsearch-transport-client', configuration: 'runtime')
+  testCompile project(path: ':x-pack:elasticsearch', configuration: 'runtime')
+  testCompile project(path: ':x-pack:elasticsearch-transport-client', configuration: 'runtime')
 }
 
 integTest {
   cluster {
     setting 'script.inline', 'true'
-    plugin ':x-plugins:elasticsearch'
+    plugin ':x-pack:elasticsearch'
     extraConfigFile 'x-pack/roles.yml', 'roles.yml'
     [
       test_admin: 'superuser',
