--- a/qa/smoke-test-plugins-ssl/build.gradle
+++ b/qa/smoke-test-plugins-ssl/build.gradle
@@ -13,13 +13,13 @@ import java.security.SecureRandom
 apply plugin: 'elasticsearch.rest-test'
 
 dependencies {
-  testCompile project(path: ':x-plugins:elasticsearch', configuration: 'runtime')
+  testCompile project(path: ':x-pack:elasticsearch', configuration: 'runtime')
 }
 
 String outputDir = "generated-resources/${project.name}"
 task copyXPackPluginProps(type: Copy) {
-  from project(':x-plugins:elasticsearch').file('src/main/plugin-metadata')
-  from project(':x-plugins:elasticsearch').tasks.pluginProperties
+  from project(':x-pack:elasticsearch').file('src/main/plugin-metadata')
+  from project(':x-pack:elasticsearch').tasks.pluginProperties
   into outputDir
 }
 project.sourceSets.test.output.dir(outputDir, builtBy: copyXPackPluginProps)
@@ -175,7 +175,7 @@ integTest {
     setting 'xpack.ssl.keystore.path', nodeKeystore.name
     setting 'xpack.ssl.keystore.password', 'keypass'
 
-    plugin ':x-plugins:elasticsearch'
+    plugin ':x-pack:elasticsearch'
 
     // copy keystores into config/
     extraConfigFile nodeKeystore.name, nodeKeystore
