--- a/qa/smoke-test-watcher-with-mustache/build.gradle
+++ b/qa/smoke-test-watcher-with-mustache/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'elasticsearch.rest-test'
 
 dependencies {
-  testCompile project(path: ':x-plugins:elasticsearch', configuration: 'runtime')
+  testCompile project(path: ':x-pack:elasticsearch', configuration: 'runtime')
   testCompile project(path: ':modules:lang-mustache', configuration: 'runtime')
 }
 
@@ -11,7 +11,7 @@ integTest {
   systemProperty 'tests.rest.blacklist', 'actions/20_jira/*'
 
   cluster {
-    plugin ':x-plugins:elasticsearch'
+    plugin ':x-pack:elasticsearch'
     setting 'xpack.security.enabled', 'false'
     setting 'xpack.monitoring.enabled', 'false'
     setting 'http.port', '9400'
