--- a/qa/smoke-test-watcher/build.gradle
+++ b/qa/smoke-test-watcher/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'elasticsearch.rest-test'
 
 dependencies {
-  testCompile project(path: ':x-plugins:elasticsearch', configuration: 'runtime')
+  testCompile project(path: ':x-pack:elasticsearch', configuration: 'runtime')
 }
 
 integTest {
   cluster {
-    plugin ':x-plugins:elasticsearch'
+    plugin ':x-pack:elasticsearch'
     setting 'xpack.security.enabled', 'false'
     setting 'xpack.monitoring.enabled', 'false'
     setting 'http.port', '9400'
