Disallow non alphanumeric chars from start or end in IDs (elastic/elasticsearch#552)
Closes elastic/elasticsearch#550

Original commit: elastic/x-pack-elasticsearch@ca0ca9f4daf7a541cdd036cee22cc2919ecacc39

--- a/elasticsearch/src/main/resources/org/elasticsearch/xpack/prelert/job/messages/prelert_messages.properties
+++ b/elasticsearch/src/main/resources/org/elasticsearch/xpack/prelert/job/messages/prelert_messages.properties
@@ -10,6 +10,8 @@ datastore.error.deleting =  Error deleting index ''{0}''
 datastore.error.deleting.missing.index = Cannot delete job - no index with id ''{0}'' in the database
 datastore.error.executing.script = Error executing script ''{0}''
 
+invalid.id = Invalid {0}; must be lowercase alphanumeric, may contain hyphens or underscores, may not start with underscore
+
 license.limit.detectors = Cannot create new job - your license limits you to {0,number,integer} detector(s), but you have configured {1,number,integer}.
 license.limit.detectors.reactivate = Cannot reactivate job with id ''{0}'' - your license limits you to {1,number,integer} concurrently running detectors. You must close a job before you can reactivate another.
 license.limit.jobs = Cannot create new job - your license limits you to {0,number,integer} concurrently running job(s). You must close a job before you can create a new one.
@@ -79,7 +81,6 @@ job.config.function.incompatible.presummarized = The ''{0}'' function cannot be 
 job.config.id.already.taken = The job cannot be created with the Id ''{0}''. The Id is already used.
 job.config.id.too.long = The job id cannot contain more than {0,number,integer} characters.
 job.config.invalid.fieldname.chars = Invalid field name ''{0}''. Field names including over, by and partition fields cannot contain any of these characters: {1}
-job.config.invalid.jobid.chars = Invalid job id; must be lowercase alphanumeric and may contain hyphens or underscores
 job.config.invalid.timeformat = Invalid Time format string ''{0}''
 job.config.missing.analysisconfig = An analysis_config must be set
 job.config.model.debug.config.invalid.bounds.percentile = Invalid model_debug_config: bounds_percentile must be in the range [0, 100]
