--- a/qa/smoke-test-rank-eval-with-mustache/src/test/resources/rest-api-spec/test/rank-eval/30_template.yaml
+++ b/qa/smoke-test-rank-eval-with-mustache/src/test/resources/rest-api-spec/test/rank-eval/30_template.yaml
@@ -41,13 +41,12 @@
   - do:
       rank_eval:
         body: {
-          "template": { 
-            "inline": "{\"query\": { \"match\" : {\"text\" : \"{{query_string}}\" }}}"
-          },
+          "templates": [ { "id": "match", "template": {"inline": "{\"query\": { \"match\" : {\"text\" : \"{{query_string}}\" }}}" }} ],
           "requests" : [
             {
                 "id": "amsterdam_query",
                 "params": { "query_string": "amsterdam" },
+                "template_id": "match",
                 "ratings": [
                     {"_index": "foo", "_type": "bar", "_id": "doc1", "rating": 0},
                     {"_index": "foo", "_type": "bar", "_id": "doc2", "rating": 1},
@@ -56,6 +55,7 @@
             {
                 "id" : "berlin_query",
                 "params": { "query_string": "berlin" },
+                "template_id": "match",
                 "ratings": [{"_index": "foo", "_type": "bar", "_id": "doc1", "rating": 1}]
             }
           ],
