--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ import org.elasticsearch.gradle.VersionProperties
 import org.elasticsearch.gradle.precommit.LicenseHeadersTask
 
 if (project.projectDir.name != 'x-pack') {
-  throw new GradleException('You must checkout x-plugins in a directory named x-plugins next to elasticsearch')
+  throw new GradleException('You must checkout x-pack in the following directory: <path to Elasticsearch checkout>/../elasticsearch-extra/x-pack')
 }
 
 subprojects {
