test: do not use security manager for client tests
Original commit: elastic/x-pack-elasticsearch@1200a1b757ce0c07eccfaac88a4751a1c0966289

--- a/qa/security-client-tests/build.gradle
+++ b/qa/security-client-tests/build.gradle
@@ -14,6 +14,7 @@ task copyXPackPluginProps(type: Copy) {
 project.sourceSets.test.output.dir(outputDir, builtBy: copyXPackPluginProps)
 
 integTest {
+  systemProperty 'tests.security.manager', 'false'
   cluster {
     plugin ':x-pack:elasticsearch'
     setupCommand 'setupDummyUser',
