test: disable security manager for custom realm integration tests
Original commit: elastic/x-pack-elasticsearch@4bcd7675b2d1f484ae0e9a1c04e0411eb0b234d3

--- a/qa/security-example-realm/build.gradle
+++ b/qa/security-example-realm/build.gradle
@@ -44,6 +44,7 @@ task buildZip(type:Zip, dependsOn: [jar]) {
 }
 
 task integTest(type: org.elasticsearch.gradle.test.RestIntegTestTask, dependsOn: buildZip) {
+  systemProperty 'tests.security.manager', 'false'
   cluster {
     plugin ':x-pack:elasticsearch'
     setting 'xpack.security.authc.realms.custom.order', '0'
