Require either BuildPlugin or StandaloneTestBasePlugin to use RestTestPlugin
It used to be that RestTestPlugin "came with" StandaloneTestBasePlugin
but we'd like to use it with BuildPlugin for the high level rest client.

Also fix some license headers.

Original commit: elastic/x-pack-elasticsearch@3d5549d170e7be1e19e03361dbeafde7653a9784

--- a/qa/smoke-test-plugins-ssl/build.gradle
+++ b/qa/smoke-test-plugins-ssl/build.gradle
@@ -10,6 +10,7 @@ import java.nio.charset.StandardCharsets
 import java.security.KeyStore
 import java.security.SecureRandom
 
+apply plugin: 'elasticsearch.standalone-test'
 apply plugin: 'elasticsearch.rest-test'
 
 dependencies {
@@ -398,4 +399,3 @@ class SanEvaluator {
     return buf.toString();
   }
 }
-
