--- a/qa/audit-tests/build.gradle
+++ b/qa/audit-tests/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'elasticsearch.standalone-test'
 apply plugin: 'elasticsearch.rest-test'
 
 dependencies {
@@ -32,4 +33,3 @@ integTest {
     }
   }
 }
-
