--- a/qa/smoke-test-graph-with-security/build.gradle
+++ b/qa/smoke-test-graph-with-security/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'elasticsearch.standalone-test'
+apply plugin: 'elasticsearch.standalone-rest-test'
 apply plugin: 'elasticsearch.rest-test'
 
 dependencies {
