--- a/qa/smoke-test-watcher-with-mustache/build.gradle
+++ b/qa/smoke-test-watcher-with-mustache/build.gradle
@@ -7,10 +7,6 @@ dependencies {
 }
 
 integTest {
-  // JIRA integration tests are ignored until a JIRA server is available for testing
-  // see https://github.com/elastic/infra/issues/1498
-  systemProperty 'tests.rest.blacklist', 'actions/20_jira/*'
-
   cluster {
     plugin ':x-pack:elasticsearch'
     setting 'xpack.security.enabled', 'false'
@@ -21,13 +17,17 @@ integTest {
     // Need to allow more compilations per minute because of the integration tests
     setting 'script.max_compilations_per_minute', '100'
 
+    //
     // JIRA integration test settings
-    setting 'xpack.notification.jira.account.test.url', 'http://localhost:8080'
-    setting 'xpack.notification.jira.account.test.allow_http', 'true'
-    setting 'xpack.notification.jira.account.test.user', 'jira_user'
-    setting 'xpack.notification.jira.account.test.password', 'secret'
-    setting 'xpack.notification.jira.account.test.issue_defaults.project.key', 'BAS'
+    //
+    // The integration tests use a JIRA account on elasticsearch.atlassian.net. This account
+    // has been created by Edward Sy [edward@elastic.co]. It uses the "XPACK WATCHER TEST"
+    // Jira project available at https://elasticsearch.atlassian.net/projects/XWT/issues/?filter=allopenissues
+    // and the "xpack-user@elastic.co" username which is also an internal Google Group.
+    setting 'xpack.notification.jira.account.test.url', 'https://elasticsearch.atlassian.net/'
+    setting 'xpack.notification.jira.account.test.user', 'xpack-user@elastic.co'
+    setting 'xpack.notification.jira.account.test.password', 'N9M4ea9rfy'
+    setting 'xpack.notification.jira.account.test.issue_defaults.project.key', 'XWT'
     setting 'xpack.notification.jira.account.test.issue_defaults.labels', ['integration-tests']
-
   }
 }
