[Watcher] Move Jira integration tests to smoke-test-watcher (elastic/elasticsearch#4534)
This commit moves the Jira rest integration tests from the smoke-test-watcher-with-mustache project to the smoke-test-watcher project.

Original commit: elastic/x-pack-elasticsearch@c6b03d557ff18d321279fb6b36acc0d757833cf8

--- a/qa/smoke-test-watcher/build.gradle
+++ b/qa/smoke-test-watcher/build.gradle
@@ -11,5 +11,20 @@ integTest {
     setting 'xpack.security.enabled', 'false'
     setting 'xpack.monitoring.enabled', 'false'
     setting 'http.port', '9400'
+    // Need to allow more compilations per minute because of the integration tests
+    setting 'script.max_compilations_per_minute', '100'
+
+    //
+    // JIRA integration test settings
+    //
+    // The integration tests use a JIRA account on elasticsearch.atlassian.net. This account
+    // has been created by Edward Sy [edward@elastic.co]. It uses the "XPACK WATCHER TEST"
+    // Jira project available at https://elasticsearch.atlassian.net/projects/XWT/issues/?filter=allopenissues
+    // and the "xpack-user@elastic.co" username which is also an internal Google Group.
+    setting 'xpack.notification.jira.account.test.url', 'https://elasticsearch.atlassian.net/'
+    setting 'xpack.notification.jira.account.test.user', 'xpack-user@elastic.co'
+    setting 'xpack.notification.jira.account.test.password', 'N9M4ea9rfy'
+    setting 'xpack.notification.jira.account.test.issue_defaults.project.key', 'XWT'
+    setting 'xpack.notification.jira.account.test.issue_defaults.labels', ['integration-tests', project.version]
   }
 }
