[Monitoring] Schedule data collection instead of sleeping (elastic/elasticsearch#4266)
This commit renames the current AgentService into MonitoringService and changes the way it works: it was previously based on thread sleeping and it now use thread scheduling instead. 

At every given time interval, a MonitoringExecution is executed. It first checks if monitoring data can be collected and if so it will collect data from Collectors and then export the data using the Exporters. There are cases where the data cannot be collected: when the service is stopping, when the interval has been set to -1 after the MonitoringExecution has been scheduled, or when the previous data collection is not yet terminated. In this last case, MonitoringExecution will still be executed at the given interval but will not collect any data.

All tasks are executed on the generic thread pool.

closes elastic/elasticsearch#2866

Original commit: elastic/x-pack-elasticsearch@d37b4d3731a106b7d94e15de908b6cd2873875da

--- a/elasticsearch/build.gradle
+++ b/elasticsearch/build.gradle
@@ -239,3 +239,9 @@ thirdPartyAudit.excludes = [
     'javax.activation.UnsupportedDataTypeException'
 ]
 
+run {
+  setting 'xpack.graph.enabled', 'true'
+  setting 'xpack.security.enabled', 'true'
+  setting 'xpack.monitoring.enabled', 'true'
+  setting 'xpack.watcher.enabled', 'true'
+}
