--- a/elasticsearch/build.gradle
+++ b/elasticsearch/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
   // common test deps
   testCompile 'org.elasticsearch:securemock:1.2'
+  testCompile "org.elasticsearch:mocksocket:${versions.mocksocket}"
   testCompile 'org.slf4j:slf4j-log4j12:1.6.2'
   testCompile 'org.slf4j:slf4j-api:1.6.2'
 }
